# 30.1

./: db.sqlite3  pyproject.toml
companies/: models.py  urls.py  views.py
companies/migrations/: 0001_initial.py
db/: docker-compose.yaml
django_project/: settings.py  urls.py
vacancies/: admin.py  models.py  serializers.py  urls.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_user.py  0003_skill_vacancy_skills.py  0004_alter_skill_options_alter_vacancy_options.py  0005_skill_is_active.py
